--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "gatsby-starter-default",
   "private": true,
+  "proxy": "http://localhost:3001",
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
+    "firebase": "^7.3.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
     "gatsby-plugin-manifest": "^2.2.25",
@@ -14,11 +21,15 @@
     "gatsby-plugin-sharp": "^2.2.34",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-transformer-sharp": "^2.3.1",
+    "nodemailer": "^6.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-alert": "^6.0.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-toastify": "^5.4.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
