--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
     "animate.css": "^3.7.2",
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "firebase": "^7.3.0",
     "gatsby": "^2.17.6",
     "gatsby-image": "^2.2.30",
@@ -29,6 +29,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-image-gallery": "^1.0.7",
     "react-slick": "^0.25.2",
     "react-sticky": "^6.0.3",
     "react-toastify": "^5.4.0",
