added visitor counter

--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-image-gallery": "^1.0.7",
+    "react-redux": "^7.2.1",
     "react-slick": "^0.25.2",
     "react-sticky": "^6.0.3",
     "react-toastify": "^5.4.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
